Got drop down list overlap fixed

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,6 +2,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    max-height: 70px;
 
     i#themeSwitch {
         margin-right: 1rem;
@@ -18,8 +19,7 @@ header {
     }
 
     > h1 {
-        font-size: 3rem;
-        font-style: italic;
+        font-size: 2rem;
         margin: {
             left: 1.5rem;
             right: auto;
@@ -38,20 +38,26 @@ header {
 			flex: 0 1 auto;
 			position: relative;
             > a {
-                font-size: 1.5rem;
-                padding: 20px;
+                height: 70px;
+                padding: {
+                    top: 27px;
+                    bottom: 27px;
+                    left: 1rem;
+                    right: 1rem;
+                }
             }
         }
 
         > li.dropDown {
            > ul.dropDown {
-                transition: all 5s ease-in;
                 display: none;
-                opacity: 0;
-                visibility: hidden;
+                position: absolute;
+                top: 70px;
+                z-index: 1;
                 > li.dropDownItem {
                     width: 100%;
                     > a {
+                        height: auto;
                         width: 100%;
                         text-align: center;
                     }
@@ -59,10 +65,6 @@ header {
             }
             &:hover ul.dropDown {
                 display: block;
-                visibility: visible;
-                opacity: 1;
-                position: absolute;
-                z-index: 1;
             }
         }
     }
